--- a/index.html
+++ b/index.html
@@ -9,38 +9,53 @@
 <body>
 
 <header class="hero">
-  <img src="assets/Profile.jpg" alt="Anusha Anumula" class="profile-pic">
-  <h1>Anusha Anumula</h1>
-  <p class="subtitle">Cloud & DevOps Engineer</p>
-  <p class="skills">AWS • Jenkins • Docker • Kubernetes • Terraform • CI/CD</p>
+  <img src="assets/Profile.jpeg" class="profile-pic" alt="Anusha Anumula">
 
-  <div class="buttons">
-    <a href="https://github.com/Testdevops01" target="_blank">GitHub</a>
-    <a href="#projects">Projects</a>
+  <div class="hero-text">
+    <h1>Anusha Anumula</h1>
+    <p class="subtitle">Cloud & DevOps Engineer</p>
+    <p class="skills">
+      AWS • Jenkins • Docker • Kubernetes • Terraform • CI/CD
+    </p>
+
+    <div class="buttons">
+      <a href="https://github.com/Testdevops01" target="_blank">GitHub</a>
+      <a href="#projects">Projects</a>
+    </div>
   </div>
 </header>
 
 <section id="projects">
   <h2>Projects</h2>
 
-  <div class="project">
-    <h3>Enterprise CI/CD Pipeline</h3>
-    <p>Jenkins, SonarQube, OWASP, Docker, Trivy, AWS ECR, EKS</p>
-    <a href="https://github.com/Testdevops01/Anusha-Anumula-Devops" target="_blank">
-      View on GitHub
-    </a>
-  </div>
+  <div class="projects-grid">
+    <div class="project">
+      <h3>Enterprise CI/CD Pipeline</h3>
+      <p>
+        Jenkins, SonarQube, OWASP, Docker, Trivy, AWS ECR, EKS.
+        Designed a production-style DevSecOps pipeline.
+      </p>
+      <a href="https://github.com/Testdevops01/Anusha-Anumula-Devops" target="_blank">
+        View Project →
+      </a>
+    </div>
 
-  <div class="project">
-    <h3>AWS Infrastructure with Terraform</h3>
-    <p>VPC, EC2, IAM, Security Groups, IaC</p>
-  </div>
+    <div class="project">
+      <h3>AWS Infrastructure with Terraform</h3>
+      <p>
+        Provisioned VPC, EC2, IAM, Security Groups using Infrastructure as Code.
+      </p>
+    </div>
 
-  <div class="project">
-    <h3>Docker Containerization</h3>
-    <p>Dockerfiles, multi-stage builds, image optimization</p>
+    <div class="project">
+      <h3>Docker Containerization</h3>
+      <p>
+        Dockerized applications using optimized Dockerfiles and best practices.
+      </p>
+    </div>
   </div>
 </section>
+
 
 <footer>
   <p>© 2026 Anusha Anumula</p>
